<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.shhsoft</groupId>
    <artifactId>shhsoft4</artifactId>
    <packaging>pom</packaging>
    <version>0.1.1-SNAPSHOT</version>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>A collection of some of Sverre's Java utilities. Most of them age-old, but still usable.</description>
    <url>https://github.com/sverrehu/shhsoft4</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit/</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Sverre H. Huseby</name>
            <email>shh@thathost.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/sverrehu/shhsoft4.git</connection>
        <developerConnection>scm:git:ssh://github.com:sverrehu/shhsoft4.git</developerConnection>
        <url>https://github.com/sverrehu/shhsoft4/tree/main</url>
    </scm>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>utils</module>
        <module>net</module>
        <module>jdbc</module>
        <module>web-utils</module>
        <module>json</module>
        <module>mail</module>
        <module>ldap</module>
        <module>phonetic</module>
    </modules>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>no.shhsoft</groupId>
                <artifactId>shhsoft4-utils</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>no.shhsoft</groupId>
                <artifactId>shhsoft4-net</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>no.shhsoft</groupId>
                <artifactId>shhsoft4-web-utils</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>no.shhsoft</groupId>
                <artifactId>shhsoft4-jdbc</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>no.shhsoft</groupId>
                <artifactId>shhsoft4-mail</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>no.shhsoft</groupId>
                <artifactId>shhsoft4-ldap</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>no.shhsoft</groupId>
                <artifactId>shhsoft4-phonetic</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>com.sun.mail</groupId>
                <artifactId>javax.mail</artifactId>
                <version>1.6.2</version>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <!-- activation is included in Java6  -->
                        <groupId>javax.activation</groupId>
                        <artifactId>activation</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.16.0</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.zapodot</groupId>
                <artifactId>embedded-ldap-junit</artifactId>
                <version>0.9.0</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>2.7.2</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doclint>all,-missing</doclint>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <keyname>${gpg.keyname}</keyname>
                            <passphrase>${gpg.passphrase}</passphrase>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.13</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
